# kutsche

./: .gitignore  Cargo.toml  README.md
examples/: config.ini  config.toml
src/: config.rs  email.rs  main.rs  smtp_server.rs
src/maildest/: file_dest.rs  matrix_dest.rs  mod.rs
src/smtp_server/: mod.rs  tests.rs
