[package]
name = "kutsche"
version = "0.1.0"
edition = "2021"


[dependencies]
configparser = "3.0"
lettre = "0.9"
log = "0.4.17"
log4rs = "1.1.1"
mailin = "0.6.0"
mail-parser = "0.4.5"
rustls = "0.20.0"
rustls-pemfile = "1.0.0"
tokio = { version = "1.18.2", features = ["full"] }
tokio-rustls = "0.23.4"
users = "0.11.0"

[dev-dependencies]
lettre_email = "0.9"
