[package]
name = "kutsche"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.56"
configparser = "3.0"
lettre = "0.9"
log = "0.4.17"
log4rs = "1.1.1"
mailin = "0.6.1"
mail-parser = "0.4.8"
matrix-sdk = "0.5.0"
ruma = "0.6.4"
rustls = "0.20.0"
rustls-pemfile = "1.0.0"
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
tokio-rustls = "0.23.4"
toml = "0.5.9"
users = "0.11.0"

[dev-dependencies]
lettre_email = "0.9"
